# pixtron-vm

./: .gitignore  ByteCodeReader.c  CMakeLists.txt  Class.c  Class.h  Config.h.in  DataSegment.c  Engine.c  FFI.c  Helper.c  Klass.c  Kni.c  Memory.c  Object.c  PixotronVM.c  Program.c  README.md  RcObject.c  Stack.c  String.c  StringUtil.c  Type.c  VM.c  VMString.c  VirtualStack.c  array.c  bc_reader.c  config.h.in  engine.c  helper.c  istring.c  itype.c  klass.c  kni.c  main.c  memory.c  object.c  op_gen.py  parr.c  pbcread.c  (+13 more)
assembler/: build.gradle.kts
assembler/example/: HelloWorld.s
assembler/gradle/wrapper/: gradle-wrapper.properties
assembler/src/main/java/io/github/leo1024/otrvm/: Assembler.java  ISerializable.java
assembler/src/main/java/io/github/leo1024/otrvm/assembler/: Assembler.java
assembler/src/main/java/io/github/leo1024/otrvm/conf/: BinaryHeader.java  Configure.java  Constants.java  DataFrom.java  DataLength.java  FieldMeta.java  FuncMeta.java  LabelMeta.java  Opcode.java  OperandSize.java  Pseudo.java  Symbol.java  TokenKind.java  Type.java  TypeMeta.java  VMOption.java  Version.java
assembler/src/main/java/io/github/leo1024/otrvm/conf/impl/: IByte.java  IFloat.java  ILong.java  IShort.java  Int.java
assembler/src/main/java/io/github/leo1024/otrvm/ex/: ParserException.java  TokenizerException.java
assembler/src/main/java/io/github/leo1024/otrvm/lexer/: CharSequence.java  Token.java  Tokenizer.java
assembler/src/main/java/io/github/leo1024/otrvm/parser/: ASTBuilder.java  CharSequencer.java  Context.java  Expr.java  Helper.java  ISParam.java  Instruction.java  Parser.java  Pseudo.java  TokenSequence.java
assembler/src/main/java/io/github/leo1024/otrvm/parser/impl/: Assert.java  AssertExpr.java  Call.java  CallExpr.java  Cast.java  End.java  EndExpr.java  Func.java  FuncExpr.java  Id.java  Iinc.java  IincExpr.java  Imm.java  Index.java  IndexExpr.java  Load.java  LoadExpr.java  Math.java  NewArray.java  Redirect.java  RedirectExpr.java  Ret.java  Simple.java  SimpleExpr.java  Store.java  TypeExpr.java  XCmp.java
assembler/src/main/java/io/github/leo1024/otrvm/parser/impl/pseudo/: End.java  Func.java
assembler/src/main/java/io/github/leo1024/otrvm/util/: ByteUtil.java  CLanguageUtil.java  LexerUtil.java  OSUtil.java
assembler/src/test/java/io/github/leo1024/otrvm/test/: AssemblerTest.java  ParserTest.java  TokenizerTest.java
assembler/src/test/resources/io/github/leo1024/otrvm/test/: HelloWorld.s
example/: Array.s  Bool.s  Fib.s  Klass.s  Logic.s  Number.s  Pixel.s  TArray.s  TBaseline.s  TLogic.s  TMath.s  TString.s  Throw.s
include/: ByteCodeReader.h  Class.h  DataSegment.h  Engine.h  IError.h  Klass.h  Memory.h  Opcode.h  Opncode.h  PixotronVM.h  Program.h  RcObject.h  Stack.h  String.h  StringUtil.h  Type.h  VM.h  VirtualStack.h
include/api/: FFI.h  Kni.h  VM.h  kni.h  pvm.h  vm.h
include/engine/: Engine.h  Helper.h  IError.h  Object.h  Opcode.h  VMString.h  array.h  bc_reader.h  engine.h  helper.h  ierror.h  istring.h  itype.h  klass.h  memory.h  object.h  opcode.h  opcode.txt  parr.h  pcore.h  perr.h  pffi.h  phandle.h  phelper.h  pklass.h  pmem.h  pobj.h  pstack.h  pstr.h  ptype.h  stack.h
lang/: build.gradle
lang/gradle/wrapper/: gradle-wrapper.properties
lang/src/main/java/io/pylon/lang/compiler/conf/: Keyword.java
lang/src/main/java/io/pylon/lang/compiler/lexer/: Tokenizer.java
lang/src/main/java/io/pylon/lang/compiler/parser/: Parser.java
lib/: Math.c  Math.s  PVAudio.s  System.c  System.s  math.c  system.c
pva/: CMakeLists.txt  pvaudio.c
pva/api/: pvaudio.h
tests/: Add.c  CMakeLists.txt  Test.c  test.c
